// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IncludeRemoveQuestion matches snapshot 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.c1 {
  width: 7.4rem;
  height: 8.7rem;
  color: white;
  border: none;
}

.c1:hover {
  box-shadow: 0 0.1rem 0.4rem 0 #00000066;
}

.c1 span {
  line-height: 1.3rem;
  font-size: 1.4rem;
  font-weight: bold;
}

.c1.include {
  background-color: #026AA1;
  padding-top: 1.4rem;
}

.c1.remove {
  background-color: #D4450C;
  padding-top: 1.4rem;
}

.c1.details {
  background-color: #424242;
}

.c2 {
  border-radius: 50%;
  background-color: #ffffff;
  vertical-align: middle;
  position: relative;
  bottom: 0.5rem;
  font-weight: 900;
  line-height: 1.4rem;
}

.c2.include {
  color: #026AA1;
}

.c2.remove {
  color: #D4450C;
}

.c2.details {
  color: #424242;
}

<div
  className="c0"
>
  <button
    aria-label="include"
    className="c1 include"
    onClick={[Function]}
  >
    <svg
      aria-hidden="true"
      aria-label="include question"
      className="svg-inline--fa fa-plus fa-border fa-lg c2 include"
      data-icon="plus"
      data-prefix="fas"
      focusable="false"
      role="img"
      style={Object {}}
      viewBox="0 0 448 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M256 80c0-17.7-14.3-32-32-32s-32 14.3-32 32V224H48c-17.7 0-32 14.3-32 32s14.3 32 32 32H192V432c0 17.7 14.3 32 32 32s32-14.3 32-32V288H400c17.7 0 32-14.3 32-32s-14.3-32-32-32H256V80z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
    <span>
      Include question
    </span>
  </button>
  <button
    aria-label="details"
    className="c1 details"
    onClick={
      [MockFunction] {
        "calls": Array [
          Array [],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      }
    }
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-ellipsis fa-border fa-lg c2 details"
      data-icon="ellipsis"
      data-prefix="fas"
      focusable="false"
      role="img"
      style={Object {}}
      viewBox="0 0 448 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M120 256c0 30.9-25.1 56-56 56s-56-25.1-56-56s25.1-56 56-56s56 25.1 56 56zm160 0c0 30.9-25.1 56-56 56s-56-25.1-56-56s25.1-56 56-56s56 25.1 56 56zm104 56c-30.9 0-56-25.1-56-56s25.1-56 56-56s56 25.1 56 56s-25.1 56-56 56z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
    <span>
      Details
    </span>
  </button>
</div>
`;

exports[`IncludeRemoveQuestion matches snapshot 2`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.c1 {
  width: 7.4rem;
  height: 8.7rem;
  color: white;
  border: none;
}

.c1:hover {
  box-shadow: 0 0.1rem 0.4rem 0 #00000066;
}

.c1 span {
  line-height: 1.3rem;
  font-size: 1.4rem;
  font-weight: bold;
}

.c1.include {
  background-color: #026AA1;
  padding-top: 1.4rem;
}

.c1.remove {
  background-color: #D4450C;
  padding-top: 1.4rem;
}

.c1.details {
  background-color: #424242;
}

.c2 {
  border-radius: 50%;
  background-color: #ffffff;
  vertical-align: middle;
  position: relative;
  bottom: 0.5rem;
  font-weight: 900;
  line-height: 1.4rem;
}

.c2.include {
  color: #026AA1;
}

.c2.remove {
  color: #D4450C;
}

.c2.details {
  color: #424242;
}

<div
  className="c0"
>
  <button
    aria-label="remove"
    className="c1 remove"
    onClick={[Function]}
  >
    <svg
      aria-hidden="true"
      aria-label="remove question"
      className="svg-inline--fa fa-minus fa-border fa-lg c2 remove"
      data-icon="minus"
      data-prefix="fas"
      focusable="false"
      role="img"
      style={Object {}}
      viewBox="0 0 448 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M432 256c0 17.7-14.3 32-32 32L48 288c-17.7 0-32-14.3-32-32s14.3-32 32-32l352 0c17.7 0 32 14.3 32 32z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
    <span>
      Remove question
    </span>
  </button>
  <button
    aria-label="details"
    className="c1 details"
    onClick={
      [MockFunction] {
        "calls": Array [
          Array [],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      }
    }
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-ellipsis fa-border fa-lg c2 details"
      data-icon="ellipsis"
      data-prefix="fas"
      focusable="false"
      role="img"
      style={Object {}}
      viewBox="0 0 448 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M120 256c0 30.9-25.1 56-56 56s-56-25.1-56-56s25.1-56 56-56s56 25.1 56 56zm160 0c0 30.9-25.1 56-56 56s-56-25.1-56-56s25.1-56 56-56s56 25.1 56 56zm104 56c-30.9 0-56-25.1-56-56s25.1-56 56-56s56 25.1 56 56s-25.1 56-56 56z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
    <span>
      Details
    </span>
  </button>
</div>
`;
